// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders in state INTRO 1`] = `
<div
  className="Game page"
>
  <Intro
    imageData={
      Array [
        Object {
          "filename": "Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "id": 1806,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Arnold_Schwarzenegger_in_Film_Festival.jpg/800px-Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "pageviews": 516051,
          "title": "Arnold Schwarzenegger",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state MEMORIZE 1`] = `
<div
  className="Game page"
>
  <Memorize
    imageData={
      Array [
        Object {
          "filename": "Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "id": 1806,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Arnold_Schwarzenegger_in_Film_Festival.jpg/800px-Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "pageviews": 516051,
          "title": "Arnold Schwarzenegger",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RECALL 1`] = `
<div
  className="Game page"
>
  <Recall
    imageData={
      Array [
        Object {
          "filename": "Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "id": 1806,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Arnold_Schwarzenegger_in_Film_Festival.jpg/800px-Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "pageviews": 516051,
          "title": "Arnold Schwarzenegger",
        },
      ]
    }
  />
</div>
`;

exports[`renders in state RESULTS 1`] = `
<div
  className="Game page"
>
  <Results
    imageData={
      Array [
        Object {
          "filename": "Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "id": 1806,
          "image": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Arnold_Schwarzenegger_in_Film_Festival.jpg/800px-Arnold_Schwarzenegger_in_Film_Festival.jpg",
          "pageviews": 516051,
          "title": "Arnold Schwarzenegger",
        },
      ]
    }
  />
</div>
`;
